# pinns_heat

./: PINN.py  pyproject.toml
utils/: fcn_module.py
